--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
 </head>
 
 <body>
+    <header>
+        <div class="headercontent">
+            <img class="logo" src="img/lambda-black.png" alt"lambda logo.">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="#">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </nav>
+         </div> 
+    </header>
+
+        <img class="jumbo" src="img/jumbo.jpg" alt"jumbo">
+        
     <div class="container">
    
         <section class="top-content">
