--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <div class="aboutheadercontent">
+    <div class="headercontent">
       <img class="logo" src="img/lambda-black.png" alt"lambda logo.">
       <nav>
           <a href="index.html">Home</a>
